...
                      modifier = Modifier.size(140.dp).testTag("screenTitle"))
                }
              },
              actions = {
                IconButton(
                    onClick = { navigationActions.navigateTo(Screen.SEARCH) },
                    modifier = Modifier.testTag("search_button")) {
                      Icon(
                          Icons.Default.Search,
                          contentDescription = "Search profiles",
                          tint = MaterialTheme.colorScheme.onPrimary)
                    }
              },
...
